--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,16 @@ fastapi~=0.121.0
 uvicorn~=0.38.0
 pydantic~=2.12.3
 starlette~=0.49.3
+
+requests>=2.26.0
+beautifulsoup4>=4.9.3
+opencv-python>=4.5.0
+numpy>=1.21.0
+moviepy>=1.0.3
+httpx>=0.24.0
+aiofiles>=23.1.0
+python-dotenv>=1.0.0
+asyncio>=3.4.3
+bs4>=0.0.1
+beautifulsoup4>=4.12.0
+playwright>=1.40.0
